KFilePlacesModel: Only create places item for known devices

Otherwise we'll create entries for devices that aren't there,
leading to broken entries. It  would also bluntly overwrite
an existing device entry with a broken one further down.

While at it, mutate the container (erase) only after the
value has been used.

BUG: 470698